Add my link to my contact info

--- a/src/readme.mdx
+++ b/src/readme.mdx
@@ -75,5 +75,5 @@ have so many spoons, but I really need _this_ framework in order to achieve the
 results I want in those projects; out in the open seemed like a great place to
 build.
 
-I'm `timthepost@protonmail.com` if you want to collaborate, you can also find me
+I'm [Tim Post](https://timthepost.netlify.app) (`timthepost@protonmail.com`) if you want to collaborate, you can also find me
 in the [Lume Discord](https://discord.gg/DTGe9UFA) server.
