Minor readme tweak

--- a/src/readme.mdx
+++ b/src/readme.mdx
@@ -6,8 +6,10 @@ title: README (MDX Playground)
 # A "Cushy" ☁️ Docu-Site Base Template For Lume
 
 <strong>
-[Get this sloppy MDX code on Github](https://github.com/timthepost/lume-infima)
-</strong>
+[Get this sloppy MDX code on Github &raquo;](https://github.com/timthepost/lume-infima)
+</strong> 
+
+This is a copy of the `README.md` file from the repo:
 
 This theme was put together in order to bring a documentation site theme with a
 familiar content-optimized CSS framework (Infima, used by Docusaurus) along with
