--- a/src/posts/mdx-post.mdx
+++ b/src/posts/mdx-post.mdx
@@ -1,9 +1,11 @@
 ---
-layout: layouts/page.vto
-title: Home
+title: A Single-sidebar Blog
 ---
 
-# Markdown H1 Heading - The "Big" One!
+# { title }
+
+We can easily use variables like `{ variable }`. That's how I can tell you the
+`{ layout }` for this post is set to { layout }.
 
 Lorem ipsum odor amet, consectetuer adipiscing elit. Luctus maximus vel turpis
 suspendisse et. Pulvinar aliquet urna metus pulvinar etiam suscipit dui
@@ -11,7 +13,6 @@ venenatis. Sem inceptos blandit tempor scelerisque finibus pellentesque in ante.
 Platea tristique commodo vehicula ultrices dapibus nulla auctor. Vitae ornare
 maximus mollis congue porta nisi curae cras in. Rhoncus nibh metus facilisi eu
 tincidunt himenaeos? Arcu rutrum commodo quam magna ornare nunc.
-
 ## Markdown H2 Heading
 
 Lorem ipsum odor amet, consectetuer adipiscing elit. Luctus maximus vel turpis
