--- a/src/404.md
+++ b/src/404.md
@@ -1,9 +1,11 @@
 ---
-title: Content not found
-layout: layouts/base.vto
+title: Content Not Found
+layout: layouts/page.vto
 url: /404.html
 ---
 
-# Content not found.
+# Content Not Found
 
-Go [home](/).
+The page you requested could not be located. You can return [home](/).
+
+If you feel that this is in error, please contact the site owner.
