--- a/src/pages/readme.mdx
+++ b/src/pages/readme.mdx
@@ -7,8 +7,9 @@ title: README (MDX Playground)
 Infima is a great framework for content-heavy sites. I thought
 it would be great to use in Lume. 
 
-See `/pages` for pages, `/docs` for documentation and `/posts` for the
-blog styles. I don't have indexes worked out yet. Or tags.
+See `/pages` for inner page example, `/docs` for documentation (not for this 
+theme,  at least not yet, just as an example for generated docs) and `/posts` 
+for the blog styles. I don't have indexes worked out yet. Or tags.
 
 Search will require using lume's router middleware to just use the pagefind
 API (since pagefind breaks this template with its styles)
