--- a/src/index.mdx
+++ b/src/index.mdx
@@ -5,8 +5,8 @@ title: Dreamy Docs
 
 # Goals:
 
- - Be component driven (all [features](/features/) should be components with)
-   isolated CSS.
+ - Be component driven (all [features](/features/) should be Lume 3 components with
+   isolated CSS).
 
  - Bring a touch of interactivity (content rating, contact form) using Lume's
    router middleware + DenoKV for a nearly zero-config experience.
