--- a/src/index.mdx
+++ b/src/index.mdx
@@ -36,7 +36,7 @@ title: Dreamy Docs
    Not doing extensive sidebars, collections, versioning or anything else like 
    that. Maintainers can add functionality via plugins. 
 
-## Current Status:
+## Current Status As Of February 2025:
 
   - Infima has been imported (`src/_includes/css/theme.css` with color and main variable
   definitions found in `src/style.css`). The `src/style.css` is what's loaded by the theme,
