docs: more nav prototype work

--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -4,4 +4,15 @@ title: Docs Index Page
 
 # Welcome To Your /docs Index Page!
 
-This is some content.
+This is some content. Obviously, some more media queries
+and thought into design is needed here. Should make the 
+left nav a child of the hamburger one?
+
+Perhaps a two-column design for `docs` is better, 
+where the side begins with "on this page .." then the TOC,
+then "In this collection" with the docs nav.
+
+This then becomes the hamburger "child" nav (with a Link
+back to the main hamburger nav)?
+
+I like option 2 better so far. Thinking about it.
