Be specific about which components

--- a/src/index.mdx
+++ b/src/index.mdx
@@ -5,11 +5,12 @@ title: Dreamy Docs
 
 # Goals:
 
- - Be component driven (all [features](/features/) should be Lume 3 components with
-   isolated CSS), this includes the hero banner above this content.
+ - Be component driven (all [infima features](/features/) should be Lume 3 
+   components with isolated CSS), this includes the hero banner above this 
+   content.
 
- - Be i18n friendly, but don't go overboard. See also "Don't try to be Docusaurus" 
-   below.
+ - Be i18n friendly, but don't go overboard. See also "Don't try to be 
+   Docusaurus" below.
 
  - Bring a touch of interactivity (content rating, contact form) using Lume's
    router middleware + DenoKV for a nearly zero-config experience.
