--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -8,11 +8,21 @@ This is some content. Obviously, some more media queries
 and thought into design is needed here. Should make the 
 left nav a child of the hamburger one?
 
+## We need headings to test the TOC, ignore this title.
+
 Perhaps a two-column design for `docs` is better, 
 where the side begins with "on this page .." then the TOC,
 then "In this collection" with the docs nav.
 
+## Same thing about the headings ...
 This then becomes the hamburger "child" nav (with a Link
 back to the main hamburger nav)?
 
+### Also, Ignore this heading.
+
 I like option 2 better so far. Thinking about it.
+
+## Finally, this heading
+
+Hopefully soon I can stop writing gibberish and go back
+to writing good stuff.
