--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -15,7 +15,7 @@ Currently, `/docs` has the following data (from `docs/_data.yml`):
 ```yml
 layout: layouts/docupage.vto
 docs_basedir: /docs/
-docs_title: Cushu Docs Documentation
+docs_title: Documentation Home
 sidebar: auto
 ```
 
