correct variable name

--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -16,7 +16,7 @@ Currently, `/docs` has the following data (from `docs/_data.yml`):
 layout: layouts/docupage.vto
 docs_basedir: /docs/
 docs_title: Documentation Home
-sidebar: auto
+docs_sidebar: auto
 ```
 
 The `layout` is what loads the docs template. You can modify it however
