--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -19,6 +19,10 @@ docs_title: Documentation Home
 docs_sidebar: auto
 ```
 
+You can have one of these in each folder, if you want to control sidebars
+individually. What I don't want is a bunch of arrays in `_config.ts` 
+when a few small files does the trick.
+
 The `layout` is what loads the docs template. You can modify it however
 you like. The `docs_basedir` value is important because it tells the nav
 generator where to anchor itself. `docs_title` is how the top level 
