--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -19,9 +19,8 @@ docs_title: Documentation Home
 docs_sidebar: auto
 ```
 
-You can have one of these in each folder, if you want to control sidebars
-individually. What I don't want is a bunch of arrays in `_config.ts` 
-when a few small files does the trick.
+You can have one of these in each folder inside `docs_basedir`, if you want 
+to control sidebars individually.
 
 The `layout` is what loads the docs template. You can modify it however
 you like. The `docs_basedir` value is important because it tells the nav
