--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -7,10 +7,9 @@ title: Documentation Home
 You'll probably want to replace this with something fancy. Also,
 all those links? They exist to show you how auto generation works.
 
-## A primer on how /docs currently works:
+## A primer on how /docs sidebars currently work:
 
-This page is just here as a quick primer for what works.
-Currently, `/docs` has the following data (from `docs/_data.yml`):
+Currently, `/docs` has the following config, in `docs/_data.yml`:
 
 ```yml
 layout: layouts/docupage.vto
@@ -19,34 +18,34 @@ docs_title: Documentation Home
 docs_sidebar: auto
 ```
 
-You can have one of these in each folder inside `docs_basedir`, if you want 
-to control sidebars individually.
+You can have a diferent `_data.yml` in each folder inside `docs_basedir`, if 
+you want to control sidebars individually. Or you can pass a custom sidebar
+file as the value of `docs_sidebar` (coming soon)
 
 The `layout` is what loads the docs template. You can modify it however
 you like. The `docs_basedir` value is important because it tells the nav
 generator where to anchor itself. `docs_title` is how the top level 
 nav link to the docs folder should appear.
 
-Finally, `sidebar` can either be `auto` (default) which auto-generates a
-basic but very flat sidebar navigation link structure.
+## Custom sidebars, sort order and TOC coming soon.
 
-## Custom sidebars, sort order and TOC coming soon
-
-You can soon pass a custom sidebar as the value for `sidebar`. This 
-will be available once the existing auto generation is broken out into 
-its own template. Not sure if .json or .vto at this point.
+Unsure if the custom value will accept JSON, a template file, or both.
+Still deciding on that. 
 
 There should also be some kind of sort order for the way the nav is 
 built, which is planned but not urgent.
 
-TOC will go on the left, which makes it all easier to vanish ito the 
-hamburger.
+Finally, the TOC will go on the left, which makes it all easier to vanish 
+ito the hamburger.
 
-## Bottom next / prev not yet functional
+## Bottom next / prev not yet functional.
 
 Possible with `nav.breadcrumbs()` I think, but still just prototype HTML.
 
-## Changed from 3 to 2 column
+## Changed from 3 to 2 column design.
 
-It just made more sense. The third column only had the TOC, which can be 
-floated or just kept on the left sidebar.
+Originally, it was modeled after Docusaurus. But two columns just made more
+sense. The third column only had the TOC, which can be floated or just kept 
+on the left sidebar. 
+
+We're not Docusaurus, after all :)
