--- a/src/index.mdx
+++ b/src/index.mdx
@@ -6,13 +6,17 @@ title: Cushy Docs
 # Goals:
 
  - Be component driven (all [infima features](/features/) should be Lume 3 
-   components), this includes the hero banner above this content. However,
-   one shouldn't _be required_ to use the component form of something in 
-   all applications, so the component CSS is kept global, with override
-   CSS files affecting only the component styles on a per-component basis.
+   components), this includes the hero banner above this content. Infima 
+   ships with _mostyly_ separate JS for each component, so brand new sites
+   can load component code only when components are used. Yay! ***However***, 
+   some users may want to import a lot of content with hard-coded JSX using 
+   the styles directly; they can use the original theme CSS file that has 
+   all of the components combined.
 
-   Likewise, JS component events still run globally; components can introduce
-   additional JS if needed. We'll have to figure that out.
+   We'll probably have `theme-full.css` (with everything in it) and 
+   `theme-componentless.css` (with all the component css moved to individual
+   plugin styles). We'll also have a combined JS in addition to moving all
+   of the component-specific JS to the individual folders.
 
  - Be i18n friendly, but don't go overboard. See also "Don't try to be 
    Docusaurus" below.
@@ -48,10 +52,9 @@ title: Cushy Docs
 
   - Infima has been imported (`src/_includes/css/theme.css` with color and main variable
   definitions found in `src/style.css`). The `src/style.css` is what's loaded by the theme,
-  which loads the `theme.css` file. Note that, soon, component-specific styles (Like breadcrumbs, 
-  tabs, buttons, pills, etc) will be compartmentalized in `_plugins/(component)/style.css`. Right 
-  now, `main.js` sets up all of the helper JS for each one, we'll move this to a per-component model 
-  too. There is no need to set up event listeners until the content actually exists.
+  which loads the `theme.css` file. `_includes/js/infima` has all of the component JS 
+  broken out into individual files, but there's some shared functions to resolve. The only 
+  generated nav right now is in `docs/`. 
 
   - Basic structure (pages in `/pages`, documentation-style files in `/docs`, posts in `/blog`
   ) has been set up. Current focus is getting the nav auto generated with some yaml tweaks for
@@ -59,4 +62,23 @@ title: Cushy Docs
 
   - Now running Lume 3 Dev 
 
-Not much else has been finished yet. 
+  - Focusing on making nav elegant, additional plugins and setup they require, blog functionality
+    as well as some kind of tag engine. I'm working on code that doesn't depend on a lot of brand 
+    new Lume code while the dust settles in Lume 3. 
+
+## What's really really exciting, is ....
+
+Fairly soon, this will be one of the easiest docs site solutions to set up, complete with all
+the interactive features that usually aren't found in static generated sites. This will be
+almost zero config, including database, because it's just going to use DenoKV.
+
+There are no edge functions to debug or maintain. I repeat, no edge functions. This will ship 
+with working middleware that can handle form submissions and basic API requests. 
+
+This should be really helpful for anyone who has a project they need to document and keep 
+a changelog for, as well as great for making marketing landing pages with easy MDX. Anyone 
+that can use Markdown can create great websites using this. 
+
+And there's almost no Node.
+
+That's just cool. Really cool.
