blog: link to example post from index page (for now)

--- a/src/blog/index.mdx
+++ b/src/blog/index.mdx
@@ -11,6 +11,8 @@ the most used tags, and the ability to drill down / search.
 
 This layout is `layouts/post-archive.vto` and `post-archive-template.vto`.
 
+**Take a look at [an example blog post](/blog/mdx-post/).**
+
 ## Auto Generated 
 
 I plan to use the infima image cards to make a nice grid display of posts 
