docs: tweak styles, add tl;dr to default index page

--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -5,9 +5,17 @@ title: Documentation Home
 # Welcome to your documentation Index Page!
 
 You'll probably want to replace this with something fancy. Also,
-all those links? They exist to show you how auto generation works.
+all those links to the left, in the sidebar? They exist to show 
+you how auto generation works. Each one is a file (or folder)
+within `{docs.basedir}`, or <code>{docs.basedir}</code>.
 
-## A primer on how /docs sidebars currently work:
+`tl;dr:` Everything in here is subject to breaking changes while
+completely auto nav generation gets worked out. Not just for this
+part, but all content.
+
+If you're curious about that, keep reading.
+
+## A primer on how "docs" and sidebars currently work:
 
 To start with, it doesn't have to be named `/docs`! It could be 
 `/documentation` or whatever you like, or you can remove it completely.
