Add h5 to test case for toc

--- a/src/blog/mdx-post.mdx
+++ b/src/blog/mdx-post.mdx
@@ -41,6 +41,14 @@ nulla at iaculis etiam enim risus montes tincidunt. Molestie dictum fusce mollis
 vel iaculis turpis varius. Nostra ultrices duis pellentesque nulla tellus odio
 habitant habitasse adipiscing. Cubilia congue dictum finibus taciti habitant.
 
+##### Markdown H5 Heading
+
+Sometimes, you just have complicated structures, so we need to auto-nav a 
+configurable list of headings. This will be handled by a `_plugins/toc/` 
+plugin, most likely (or part of the conductor one).
+
+Anyway, here for testing:
+
 - unordered list one
 - unordered list two
 - unordered list three
