introduce locale (internationalization) and create entries for error pages. Will slowly move the rest of the strings here.

--- a/src/index.mdx
+++ b/src/index.mdx
@@ -1,6 +1,10 @@
 ---
 layout: layouts/homepage.vto
 title: Cushy Docs
+menu:
+  visible: true
+  align: left
+  linkText: Home (Index)
 ---
 
 # Goals:
