--- a/src/404.md
+++ b/src/404.md
@@ -1,11 +1,6 @@
 ---
-title: Content Not Found
-layout: layouts/page.vto
+layout: layouts/error_404.vto
 url: /404.html
+menu:
+  visible: false
 ---
-
-# Content Not Found
-
-The page you requested could not be located. You can return [home](/).
-
-If you feel that this is in error, please contact the site owner.
