docs: fix syntax hint

--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -112,7 +112,7 @@ If you want to go back to three columns, you'll need to edit the
 template, and have it look something like this (and this is just
 using Infama's [grid system](https://infima.dev/docs/layout/grid)):
 
-```HTML
+```html
 <div class="container">
     <div class="row">
         <div class="col-md-3">
