Can probably handle discord.

--- a/src/index.mdx
+++ b/src/index.mdx
@@ -83,4 +83,4 @@ at:
 timthepost@protonmail.com
 ```
 
-I'm disabled (a brain cancer survivor) so I prefer asynchronous collaboration over direct chat.
+If this seems like it's going to be active, I'll set up a Discord server.
