Reference correct search in content

--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -82,7 +82,7 @@ AutoTOC will happen through the community plugin once the rest of the
 generated navigation is sorted out.
 
 Next and prev links aren't yet auto-generated. I'm currently working
-on the whole site nav via Lume's `site.search()`. Once that's done 
+on the whole site nav via Lume's `search.pages()`. Once that's done 
 then we'll use  nav.breadcrumbs()` for the next/prev links, which 
 are hopefully turned into components by then.
 
