--- a/src/features/search.mdx
+++ b/src/features/search.mdx
@@ -7,7 +7,7 @@ layout: layouts/page.vto
 
 Talk about how we're using Pagefind, but via the API through middleware that
 also implements more tag options in search, and gives us total control of the
-search UX. We still use a combination of Pagefind + Lume's `site.search()`, 
+search UX. We still use a combination of Pagefind + Lume's `search.pages()`, 
 it's just resturned via `fetch()` to the middleware.
 
 Tag filtering with markdown syntax will eventually be supported.
