site.search -> search.pages()

--- a/src/blog/index.mdx
+++ b/src/blog/index.mdx
@@ -18,7 +18,7 @@ This layout is `layouts/post-archive.vto` and `post-archive-template.vto`.
 I plan to use the infima image cards to make a nice grid display of posts 
 using OG images. This is going to get a lot of help from the JSON that the
 `_plugins/cushy-docs-conductor` generates, at least for tags. The rest of
-the posts are a simple `site.search()`, I think.
+the posts are a simple `search.pages()`, I think.
 
 ## Can we do better than a list of stuff?
 
