docs: auto nav and sort is done

--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -1,5 +1,6 @@
 ---
 title: Documentation Home
+order: 0
 ---
 
 # Welcome to your documentation Index Page!
@@ -50,7 +51,7 @@ page frontmatter:
 
 ```yml
 ---
-sort_order: 1
+order: 1
 hidden: false
 draft: false
 ---
