index: content update

--- a/src/index.mdx
+++ b/src/index.mdx
@@ -7,12 +7,14 @@ menu:
   linkText: Home (Index)
 ---
 
-### A Few More Important Details:
+## Additional Project Goals And Aspirations:
 
 No-one likes cookie banners, and an explicit goal of this theme is to
 offer islands of interactivity without requiring the use of cookies. Local
 storage is utilized with graceful checks to store interaction data (votes, 
-ratings, and other things).
+ratings, and other things), but always treated as ephemeral. Sure, people 
+might vote twice for the same post. Is stopping that worth forcing people
+to sign in? I don't believe it is.
 
 The authoring experience is equally as important as the user's reading experience,
 because one leads to the other. Local development should match what's in
