Update blog with actual posts

--- a/src/blog/index.mdx
+++ b/src/blog/index.mdx
@@ -11,7 +11,7 @@ the most used tags, and the ability to drill down / search.
 
 This layout is `layouts/post-archive.vto` and `post-archive-template.vto`.
 
-**Take a look at [an example blog post](/blog/mdx-post/).**
+**Take a look at [an example blog post](/blog/announcing-cushy-content/).**
 
 ## Auto Generated 
 
